[package]
name = "ruxv6-kernel"
version = "0.1.0"
authors = ["algon-320 <algon.0320@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = {version = "1.0", features = ["spin_no_std"]}
bitflags = "1.1.0"
spin = "0.5"

[package.metadata.cargo-xbuild]
sysroot_path = "../sysroot"
